--- a/CNN_for_NLP.ipynb
+++ b/CNN_for_NLP.ipynb
@@ -65,21 +65,25 @@
       "metadata": {
         "id": "UBoaXwOpPLKJ",
         "colab_type": "code",
+        "outputId": "70dd7702-51fe-4bdc-92dd-3d03fcffc234",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 54
-        },
-        "outputId": "0b90314e-0163-4c29-f08f-808929d68bb2"
+          "height": 122
+        }
       },
       "source": [
         "drive.mount(\"/content/drive\")"
       ],
-      "execution_count": 11,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Drive already mounted at /content/drive; to attempt to forcibly remount, call drive.mount(\"/content/drive\", force_remount=True).\n"
+            "Go to this URL in a browser: https://accounts.google.com/o/oauth2/auth?client_id=947318989803-6bn6qk8qdgf4n4g3pfee6491hc0brc4i.apps.googleusercontent.com&redirect_uri=urn%3aietf%3awg%3aoauth%3a2.0%3aoob&response_type=code&scope=email%20https%3a%2f%2fwww.googleapis.com%2fauth%2fdocs.test%20https%3a%2f%2fwww.googleapis.com%2fauth%2fdrive%20https%3a%2f%2fwww.googleapis.com%2fauth%2fdrive.photos.readonly%20https%3a%2f%2fwww.googleapis.com%2fauth%2fpeopleapi.readonly\n",
+            "\n",
+            "Enter your authorization code:\n",
+            "··········\n",
+            "Mounted at /content/drive\n"
           ],
           "name": "stdout"
         }
@@ -202,29 +206,29 @@
       "metadata": {
         "id": "yBU2y0doeRd0",
         "colab_type": "code",
+        "outputId": "f15e85a8-fa25-4fed-b222-d2d527c2bf0e",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "1e9e5541-1aa9-4f5e-8e17-b81dd69b1a77"
+        }
       },
       "source": [
         "data_labels = train_data.sentiment.values\n",
         "data_labels"
       ],
-      "execution_count": 51,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "array([0, 0, 0, ..., 1, 1, 1])"
+              "array([0, 0, 0, ..., 4, 4, 4])"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 51
+          "execution_count": 14
         }
       ]
     },
@@ -246,16 +250,16 @@
       "metadata": {
         "id": "ktKX6R2repF-",
         "colab_type": "code",
+        "outputId": "50ab154a-e47f-4b9c-f8b6-23d8dc37a4c5",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "7f5a8fc8-fb63-45c0-d13f-4e6c7a562da7"
+        }
       },
       "source": [
         "set(data_labels)"
       ],
-      "execution_count": 45,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -267,7 +271,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 45
+          "execution_count": 16
         }
       ]
     },
@@ -323,6 +327,244 @@
       ],
       "execution_count": 0,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "mSCH8Qs-gbeJ",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "test_idx = np.random.randint(0, 800000, 8000)\n",
+        "test_idx = np.concatenate((test_idx, test_idx+800000))"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "izHf9-YqlpgK",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "test_inputs = data_inputs[test_idx]\n",
+        "test_labels = data_labels[test_idx]\n",
+        "train_inputs = np.delete(data_inputs, test_idx, axis=0)\n",
+        "train_labels = np.delete(data_labels, test_idx)"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "_dZaHQWKLms7",
+        "colab_type": "text"
+      },
+      "source": [
+        "Model Creation"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "ntZkK1PoLqmQ",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "class DCNN(tf.keras.Model):\n",
+        "    \n",
+        "    def __init__(self,\n",
+        "                 vocab_size,\n",
+        "                 emb_dim=128,\n",
+        "                 nb_filters=50,\n",
+        "                 FFN_units=512,\n",
+        "                 nb_classes=2,\n",
+        "                 dropout_rate=0.1,\n",
+        "                 training=False,\n",
+        "                 name=\"dcnn\"):\n",
+        "        super(DCNN, self).__init__(name=name)\n",
+        "        \n",
+        "        self.embedding = layers.Embedding(vocab_size,\n",
+        "                                          emb_dim)\n",
+        "        self.bigram = layers.Conv1D(filters=nb_filters,\n",
+        "                                    kernel_size=2,\n",
+        "                                    padding=\"valid\",\n",
+        "                                    activation=\"relu\")\n",
+        "        self.trigram = layers.Conv1D(filters=nb_filters,\n",
+        "                                     kernel_size=3,\n",
+        "                                     padding=\"valid\",\n",
+        "                                     activation=\"relu\")\n",
+        "        self.fourgram = layers.Conv1D(filters=nb_filters,\n",
+        "                                      kernel_size=4,\n",
+        "                                      padding=\"valid\",\n",
+        "                                      activation=\"relu\")\n",
+        "        self.pool = layers.GlobalMaxPool1D() # no training variable so we can\n",
+        "                                             # use the same layer for each\n",
+        "                                             # pooling step\n",
+        "        self.dense_1 = layers.Dense(units=FFN_units, activation=\"relu\")\n",
+        "        self.dropout = layers.Dropout(rate=dropout_rate)\n",
+        "        if nb_classes == 2:\n",
+        "            self.last_dense = layers.Dense(units=1,\n",
+        "                                           activation=\"sigmoid\")\n",
+        "        else:\n",
+        "            self.last_dense = layers.Dense(units=nb_classes,\n",
+        "                                           activation=\"softmax\")\n",
+        "    \n",
+        "    def call(self, inputs, training):\n",
+        "        x = self.embedding(inputs)\n",
+        "        x_1 = self.bigram(x)\n",
+        "        x_1 = self.pool(x_1)\n",
+        "        x_2 = self.trigram(x)\n",
+        "        x_2 = self.pool(x_2)\n",
+        "        x_3 = self.fourgram(x)\n",
+        "        x_3 = self.pool(x_3)\n",
+        "        \n",
+        "        merged = tf.concat([x_1, x_2, x_3], axis=-1) # (batch_size, 3 * nb_filters)\n",
+        "        merged = self.dense_1(merged)\n",
+        "        merged = self.dropout(merged, training)\n",
+        "        output = self.last_dense(merged)\n",
+        "        \n",
+        "        return output"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "dDrt-lC7MRh_",
+        "colab_type": "text"
+      },
+      "source": [
+        "Configuration"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "3EaSJhr_MTrC",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "VOCAB_SIZE = tokenizer.vocab_size\n",
+        "\n",
+        "EMB_DIM = 200\n",
+        "NB_FILTERS = 100\n",
+        "FFN_UNITS = 256\n",
+        "NB_CLASSES = len(set(train_labels))\n",
+        "\n",
+        "DROPOUT_RATE = 0.2\n",
+        "\n",
+        "BATCH_SIZE = 32\n",
+        "NB_EPOCHS = 5"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "pnqWkMmNMcog",
+        "colab_type": "text"
+      },
+      "source": [
+        "Training"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "cA4fe7opMeeb",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "Dcnn = DCNN(vocab_size=VOCAB_SIZE,\n",
+        "            emb_dim=EMB_DIM,\n",
+        "            nb_filters=NB_FILTERS,\n",
+        "            FFN_units=FFN_UNITS,\n",
+        "            nb_classes=NB_CLASSES,\n",
+        "            dropout_rate=DROPOUT_RATE)"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "7FfJgZrZMhCX",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "if NB_CLASSES == 2:\n",
+        "    Dcnn.compile(loss=\"binary_crossentropy\",\n",
+        "                 optimizer=\"adam\",\n",
+        "                 metrics=[\"accuracy\"])\n",
+        "else:\n",
+        "    Dcnn.compile(loss=\"sparse_categorical_crossentropy\",\n",
+        "                 optimizer=\"adam\",\n",
+        "                 metrics=[\"sparse_categorical_accuracy\"])"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "9AQ7sSgrQ4T-",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "checkpoint_path = \"./drive/My Drive/Colab Notebooks/data files/ckpt/\"\n",
+        "\n",
+        "ckpt = tf.train.Checkpoint(Dcnn=Dcnn)\n",
+        "\n",
+        "ckpt_manager = tf.train.CheckpointManager(ckpt, checkpoint_path, max_to_keep=5)\n",
+        "\n",
+        "if ckpt_manager.latest_checkpoint:\n",
+        "    ckpt.restore(ckpt_manager.latest_checkpoint)\n",
+        "    print(\"Latest checkpoint restored!!\")"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "GrP_wID-RRXu",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 51
+        },
+        "outputId": "6778110c-7b77-4490-99e3-b89c0b71f7c4"
+      },
+      "source": [
+        "Dcnn.fit(train_inputs,\n",
+        "         train_labels,\n",
+        "         batch_size=BATCH_SIZE,\n",
+        "         epochs=NB_EPOCHS)\n",
+        "ckpt_manager.save()"
+      ],
+      "execution_count": 0,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Epoch 1/5\n",
+            " 2763/49503 [>.............................] - ETA: 2:29:47 - loss: 0.4839 - accuracy: 0.7662"
+          ],
+          "name": "stdout"
+        }
+      ]
     }
   ]
 }
